<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:menuCategory="secondary" />
    <item
            android:id="@+id/streamsFragment"
            android:title="@string/streams"
            android:icon="@drawable/ic_streams"
            android:menuCategory="secondary" />
    <item
            android:id="@+id/followingFragment"
            android:title="@string/following"
            android:icon="@drawable/ic_following"
            android:menuCategory="secondary" />
    <item
            android:id="@+id/profileFragment"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            android:menuCategory="secondary" />

</menu>
