<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

    <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="90dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_logo_alt" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/logo"
            android:layout_above="@id/signupFallback">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:text="@string/sign_in"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="36dp" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="29dp"
                android:autofillHints="username"
                android:hint="@string/login"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColorHint="@color/hintTextColor"
                android:textColor="@color/hintTextColor"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:inputType="text"
                android:gravity="center_vertical" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="29dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textColorHint="@color/hintTextColor"
                android:textColor="@color/hintTextColor"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:inputType="textPassword"
                android:gravity="center_vertical" />

        <com.google.android.material.button.MaterialButton
                app:cornerRadius="10dp"
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:backgroundTint="@color/secondary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/signupFallback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/signupLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/secondary"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:layout_marginStart="4dp" />

    </LinearLayout>

</RelativeLayout>