<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".editProfile.EditProfileFragment"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

    <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="28dp" />

    <ImageView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tick"
            android:contentDescription="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/toolbarTitle"
            app:layout_constraintTop_toTopOf="@+id/toolbarTitle" />

    <EditText
            android:id="@+id/loginInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints="username"
            android:hint="@string/login"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/hintTextColor"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarTitle"
            android:layout_marginTop="30dp" />

    <EditText
            android:id="@+id/statusInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/status"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/hintTextColor"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="text"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginInput"
            android:layout_marginTop="30dp" />

    <EditText
            android:id="@+id/aboutInput"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/about_hint"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/hintTextColor"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="text|textMultiLine"
            android:gravity="start"
            android:paddingTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusInput"
            android:layout_marginTop="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>