<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

    <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="28dp" />

    <ImageView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit"
            app:layout_constraintEnd_toStartOf="@id/logoutButton"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbarTitle"
            app:layout_constraintTop_toTopOf="@+id/toolbarTitle" />

    <ImageView
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/toolbarTitle"
            app:layout_constraintTop_toTopOf="@+id/toolbarTitle" />

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_default_avatar"
            app:layout_constraintTop_toBottomOf="@+id/toolbarTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
            android:id="@+id/changeAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            android:layout_marginEnd="12dp" />

    <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Andy Williams"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp" />

    <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Streamer, ordinary IT guy"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/status"
            android:id="@+id/linearLayout">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="207"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/secondaryTextColor" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="42"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/secondaryTextColor" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1,289"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/views"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/secondaryTextColor" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="576"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/secondaryTextColor" />

        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:id="@+id/textView10"
            android:layout_marginTop="20dp" />

    <TextView
            android:id="@+id/aboutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/loremipsum"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>