<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Signup.SignUpFragment">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_logo_alt"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/loginInput" />

    <EditText
            android:id="@+id/loginInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints="username"
            android:hint="@string/login"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/hintTextColor"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="text"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
            android:layout_marginBottom="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp" />

    <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/hintTextColor"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/loginInput"
            android:layout_marginBottom="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp" />

    <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints="password"
            android:hint="@string/password"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/hintTextColor"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            android:layout_marginBottom="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/signupButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            app:cornerRadius="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:backgroundTint="@color/secondary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            android:layout_marginBottom="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginLink"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp" />


    <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/loginLink"
            app:layout_constraintEnd_toStartOf="@+id/loginLink"
            android:layout_marginEnd="4dp" />

    <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/secondary"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/signupButton"
            app:layout_constraintStart_toEndOf="@+id/have_account"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>